--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <input class="input-field" type="email" name="email" id="email" value="" required>
 
             <label for="message">Message</label>
-            <textarea class="input-field" id="message" name="message" value="" required></textarea>
+            <textarea class="input-field" id="message" name="message" required></textarea>
 
             <input id="submit-btn" type="submit" name="submit" value="send">
         </form>
