--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="about-me">
         <h3>More about me</h3>
-        <p>I am studying Computer Science and Engineering final year.</p>
+        <p>Recently I finished studying Computer Science and Engineering at Faculty of Electronic Engineering.</p>
         <p>I like programming specially 'Web development' it is very interesting to me.</p>
 
         <h3>TOP EXPERTISE</h3>
